# TodoApp

./: .gitignore  README.md
src/backend/python/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml  requirements.txt
src/backend/python/alembic/: env.py
src/backend/python/alembic/versions/: 20260630_0000_aabbccdd1122_initial_create.py  20260702_0000_bbccddee2233_add_files_table.py  20260718_0000_ccddeeff3344_add_todo_item_attachments.py  20260719_0000_ddeeff445566_add_users_table.py  20260720_0000_eeff00556677_add_user_audit_columns.py
src/backend/python/api/: Dockerfile  main.py  security.py
src/backend/python/api/repositories/: base_repository.py  file_repository.py  todo_item_attachment_repository.py  todo_item_repository.py  user_repository.py
src/backend/python/api/routers/: files.py  todo_items.py  tokens.py  users.py
src/backend/python/api/schemas/: file.py  todo_item.py  todo_item_attachment.py  user.py
src/backend/python/api/services/: file_service.py  todo_item_attachment_service.py  todo_item_service.py  user_service.py
src/backend/python/app/: config.py  database.py  main.py
src/backend/python/app/models/: __init__.py  email_log.py  todo_item.py
src/backend/python/app/repositories/: base_repository.py  todo_item_repository.py
src/backend/python/app/routers/: todo_items.py
src/backend/python/app/services/: todo_item_service.py
src/backend/python/app/worker/: main.py
src/backend/python/shared/: config.py  database.py
src/backend/python/worker/: Dockerfile  main.py
(+424 files in other folders)
