[project]
name = "todo-app-python"
version = "0.1.0"
description = "Todo API and background worker built with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.14.0",
    "apscheduler==3.11.0",
    "fastapi==0.115.6",
    "openpyxl==3.1.5",
    "pydantic-settings==2.7.0",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.5",
]
